{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 76,
  "lineage": "7077fc37-14c2-0697-7187-c1cc0ad7e94c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:internet-gateway/igw-0bee91b27dc64b109",
            "id": "igw-0bee91b27dc64b109",
            "owner_id": "992382828900",
            "tags": {
              "Name": "deal-igw"
            },
            "tags_all": {
              "Name": "deal-igw"
            },
            "vpc_id": "vpc-08f081f20c5677519"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:route-table/rtb-0d56843ea7cb12467",
            "id": "rtb-0d56843ea7cb12467",
            "owner_id": "992382828900",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bee91b27dc64b109",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deal-rtb"
            },
            "tags_all": {
              "Name": "deal-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f081f20c5677519"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b59dbc1a728760c7",
            "route_table_id": "rtb-0d56843ea7cb12467",
            "subnet_id": "subnet-078dde83a95d787d7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a749dbff457a1d4a",
            "route_table_id": "rtb-0d56843ea7cb12467",
            "subnet_id": "subnet-0bed005c3e20c989a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d760447b68e1b23",
            "route_table_id": "rtb-0d56843ea7cb12467",
            "subnet_id": "subnet-043d020b6a184e980"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:security-group/sg-00757ede69cda8273",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00757ede69cda8273",
            "ingress": [],
            "name": "terraform-20240216015044546700000001",
            "name_prefix": "terraform-",
            "owner_id": "992382828900",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "deal-sg"
            },
            "tags_all": {
              "Name": "deal-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f081f20c5677519"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:subnet/subnet-078dde83a95d787d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078dde83a95d787d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382828900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deal-subnet-0"
            },
            "tags_all": {
              "Name": "deal-subnet-0"
            },
            "vpc_id": "vpc-08f081f20c5677519"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:subnet/subnet-0bed005c3e20c989a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bed005c3e20c989a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382828900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deal-subnet-1"
            },
            "tags_all": {
              "Name": "deal-subnet-1"
            },
            "vpc_id": "vpc-08f081f20c5677519"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:subnet/subnet-043d020b6a184e980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043d020b6a184e980",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382828900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deal-subnet-2"
            },
            "tags_all": {
              "Name": "deal-subnet-2"
            },
            "vpc_id": "vpc-08f081f20c5677519"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:vpc/vpc-08f081f20c5677519",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f49c603a9e9aff3",
            "default_route_table_id": "rtb-04d6b749b4d3e5aef",
            "default_security_group_id": "sg-06cc9524b8045cec0",
            "dhcp_options_id": "dopt-05c8d6d61324c0ce9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f081f20c5677519",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d6b749b4d3e5aef",
            "owner_id": "992382828900",
            "tags": {
              "Name": "deal-vpc"
            },
            "tags_all": {
              "Name": "deal-vpc"
            }
          }
        }
      ]
    }
  ]
}